# data-science

./: .gitignore  README.md  pyproject.toml
food-demand-forecasting/: basic_models.ipynb  eda.ipynb  fileplots.ipynb  food-demand-eda.py  pyproject.toml
hybrid-search-retrieval/: hybrid-search.py
mall-customer-segmentation/: kmeans-mall-data.py  kmeans_mall_data.py  pyproject.toml
