[project]
name = "kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "anthropic>=0.64.0",
    "marimo>=0.15.0",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
]
