[project]
name = "customer-segmentation-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "marimo>=0.15.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "ruff>=0.12.10",
    "scikit-learn>=1.7.1",
]
